        - Returned error status when a client sends a request although 
          no client connector supporting this request's protocol is 
          registered. Reported by Avi Flax.
        - Fixed bug in Template class when the pattern is updated.
        - Fixed regression with Directory causing a 405 status to be
          returned for conditional GETs. Reported by Serge Ilyn.
    - Enhancements
        - Upgraded Jetty library to version 6.1.18.
        - SpringServerServlet nows gets its component fully configured,
          with a default WAR client and parameters copied.
          Reported by Dustin N. Jenkins.
        - Added Variable.URI_QUERY_PARAM type to match query parameter
          names or values. Suggested by John Wismar.
        - ServerServlet nows copies the ServletContext into a special
          "org.restlet.ext.servlet.ServletContext" attribute of both
          the Component's context and the Application's context.
        - Added logging capabilities to the Router classes via a new
          protected log(Route) method.
        - Directory listings now correctly display a trailing slash for
          directories. Suggested by Aron Roberts.
        - Load only once the accept.properties file used by the 
          TunnelFilter instance.
        - Load only once the agent.properties file used to populate 
          ClientInfo instances.
        - SpringFinder and SpringBeanFinder now support the creation of 
          resources based on ServerResource.
        - SpringRouter and SpringBeanRouter now support the creation of 
          resources based on ServerResource.
    - API changes
        - Added client and server RIAP connectors.
          Suggested by John Logsdon and Nirav Shah.
        - Added ClientInfo#getPreferredLanguage(), 
          getPreferredMediaType(), etc. methods.
          Suggested by Jonathan Hall.
        - Uniform has been trimmed to a single handle(Request, Response)