@@ -92,7 +92,7 @@ public class UserResource extends Resource {
      */
     public void challenge() {
         getResponse().setStatus(Status.CLIENT_ERROR_CONFLICT);
-        getResponse().setChallengeRequest(
+        getResponse().getChallengeRequests().add(
                 new ChallengeRequest(ChallengeScheme.HTTP_BASIC, "Restlet"));
     }
 
