@@ -113,7 +113,7 @@ public class RequestTokenResource extends Resource {
                 ChallengeScheme.HTTP_OAUTH, this.realm);
 
         if (consumer == null) {
-            getResponse().setChallengeRequest(challengeRequest);
+            getResponse().getChallengeRequests().add(challengeRequest);
             getResponse().setStatus(Status.CLIENT_ERROR_UNAUTHORIZED,
                     "Invalid Consumer Key");
             challengeRequest.getParameters().add("oauth_problem",
